some new thoughts and understanding of the viper model

--- a/ChatterBee/Modules/ChatterBeeSeach/Base.lproj/Main.storyboard
+++ b/ChatterBee/Modules/ChatterBeeSeach/Base.lproj/Main.storyboard
@@ -38,13 +38,17 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="mother" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Roz-86-q5V">
-                                                    <rect key="frame" x="57" y="66" width="245" height="30"/>
+                                                    <rect key="frame" x="242" y="52" width="96" height="30"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <color key="backgroundColor" red="0.19295302010000001" green="0.3694421141" blue="0.60719903519999996" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
                                                 </textField>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pSR-T1-qCW">
+                                                    <rect key="frame" x="15" y="21" width="112" height="118"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
                                             </subviews>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.19295302010000001" green="0.3694421141" blue="0.60719903519999996" alpha="1" colorSpace="calibratedRGB"/>
